# musp

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  compose.prod.yml  compose.yml  openapi.yaml  openapi.yml  ruff.toml
api/: .dockerignore  Dockerfile  custom-requirements.txt  example.env  main.py  openapi.yaml  requirements.txt  setup.cfg
api/.openapi-generator/: FILES
api/celery/: celery_app.py  client.py  job_task.py
api/celery_app/: celery_app.py  client.py  job_task.py
api/handler/: create_job_handler.py
api/models/: generated_model.py  job.py  job_create_request.py  job_response.py  job_status.py
api/modules/: fetch_source.py  get_download_link.py  separate_source.py  upload_source.py
api/notebooks/: cloud_storage.ipynb  seprate_music.ipynb
api/routers/: generated_routers.py  jobs.py
api/src/celery_server/: __init__.py  celery_app.py  get_task_progress.py  redis_client.py
api/src/celery_sever/: celery_app.py
api/src/cron_job/: __init__.py  refresh_wav_url.py
api/src/openapi_server/: main.py  security_api.py
api/src/openapi_server/apis/: check_job_api.py  check_job_api_base.py  create_job_api.py  create_job_api_base.py  get_api.py  get_api_base.py  get_url_api.py  (+5 more)
api/src/tmp_job/: check_is_inst_wav_url_exist.py  create_and_upload_inst_wav_url.py
api/templates/: api.mustache  base_api.mustache  main.mustache  security_api.mustache
api/tests/: test_check_job_api.py  test_create_job_api.py  test_get_api.py  test_get_url_api.py  test_post_api.py  test_user_api.py
api/utils/: auth.py  get_api_key.py
api/ws/: client.py
(+209 files in other folders)
